@@ -2498,29 +2498,54 @@ int	cmp_key_id(const char *key_1, const char *key_2)
 
 const char	*zbx_permission_string(int perm)
 {
-	switch (perm) {
-	case PERM_DENY:
-		return "dn";
-	case PERM_READ_LIST:
-		return "rl";
-	case PERM_READ_ONLY:
-		return "ro";
-	case PERM_READ_WRITE:
-		return "rw";
-	default:
-		return "unknown";
+	switch (perm)
+	{
+		case PERM_DENY:
+			return "dn";
+		case PERM_READ_LIST:
+			return "rl";
+		case PERM_READ_ONLY:
+			return "ro";
+		case PERM_READ_WRITE:
+			return "rw";
+		default:
+			return "unknown";
+	}
+}
+
+const char	*zbx_poller_type_string(int poller_type)
+{
+	switch (poller_type)
+	{
+		case ZBX_POLLER_TYPE_NORMAL:
+			return "poller";
+		case ZBX_POLLER_TYPE_UNREACHABLE:
+			return "poller for unreachable hosts";
+		case ZBX_POLLER_TYPE_IPMI:
+			return "ipmi poller";
+		case ZBX_POLLER_TYPE_PINGER:
+			return "pinger";
+		default:
+			return "unknown";
 	}
 }
 
 const char	*zbx_item_value_type_string(zbx_item_value_type_t value_type)
 {
-	switch (value_type) {
-	case ITEM_VALUE_TYPE_FLOAT: return "Numeric (float)";
-	case ITEM_VALUE_TYPE_STR: return "Character";
-	case ITEM_VALUE_TYPE_LOG: return "Log";
-	case ITEM_VALUE_TYPE_UINT64: return "Numeric (unsigned)";
-	case ITEM_VALUE_TYPE_TEXT: return "Text";
-	default: return "unknown";
+	switch (value_type)
+	{
+		case ITEM_VALUE_TYPE_FLOAT:
+			return "Numeric (float)";
+		case ITEM_VALUE_TYPE_STR:
+			return "Character";
+		case ITEM_VALUE_TYPE_LOG:
+			return "Log";
+		case ITEM_VALUE_TYPE_UINT64:
+			return "Numeric (unsigned)";
+		case ITEM_VALUE_TYPE_TEXT:
+			return "Text";
+		default:
+			return "unknown";
 	}
 }
 
@@ -2542,60 +2567,99 @@ const char	*zbx_interface_type_string(zbx_interface_type_t type)
 
 const char	*zbx_result_string(int result)
 {
-	switch (result) {
-	case SUCCEED: return "SUCCEED";
-	case FAIL: return "FAIL";
-	case NOTSUPPORTED: return "NOTSUPPORTED";
-	case NETWORK_ERROR: return "NETWORK_ERROR";
-	case TIMEOUT_ERROR: return "TIMEOUT_ERROR";
-	case AGENT_ERROR: return "AGENT_ERROR";
-	default: return "unknown";
+	switch (result)
+	{
+		case SUCCEED:
+			return "SUCCEED";
+		case FAIL:
+			return "FAIL";
+		case NOTSUPPORTED:
+			return "NOTSUPPORTED";
+		case NETWORK_ERROR:
+			return "NETWORK_ERROR";
+		case TIMEOUT_ERROR:
+			return "TIMEOUT_ERROR";
+		case AGENT_ERROR:
+			return "AGENT_ERROR";
+		default:
+			return "unknown";
 	}
 }
 
 const char	*zbx_trigger_severity_string(zbx_trigger_severity_t severity)
 {
-	switch (severity) {
-	case TRIGGER_SEVERITY_NOT_CLASSIFIED: return "Not classified";
-	case TRIGGER_SEVERITY_INFORMATION: return "Information";
-	case TRIGGER_SEVERITY_WARNING: return "Warning";
-	case TRIGGER_SEVERITY_AVERAGE: return "Average";
-	case TRIGGER_SEVERITY_HIGH: return "High";
-	case TRIGGER_SEVERITY_DISASTER: return "Disaster";
-	default: return "unknown";
+	switch (severity)
+	{
+		case TRIGGER_SEVERITY_NOT_CLASSIFIED:
+			return "Not classified";
+		case TRIGGER_SEVERITY_INFORMATION:
+			return "Information";
+		case TRIGGER_SEVERITY_WARNING:
+			return "Warning";
+		case TRIGGER_SEVERITY_AVERAGE:
+			return "Average";
+		case TRIGGER_SEVERITY_HIGH:
+			return "High";
+		case TRIGGER_SEVERITY_DISASTER:
+			return "Disaster";
+		default:
+			return "unknown";
 	}
 }
 
 const char	*zbx_item_logtype_string(zbx_item_logtype_t logtype)
 {
-	switch (logtype) {
-	case ITEM_LOGTYPE_INFORMATION: return "Information";
-	case ITEM_LOGTYPE_WARNING: return "Warning";
-	case ITEM_LOGTYPE_ERROR: return "Error";
-	case ITEM_LOGTYPE_FAILURE_AUDIT: return "Failure Audit";
-	case ITEM_LOGTYPE_SUCCESS_AUDIT: return "Success Audit";
-	default: return "unknown";
+	switch (logtype)
+	{
+		case ITEM_LOGTYPE_INFORMATION:
+			return "Information";
+		case ITEM_LOGTYPE_WARNING:
+			return "Warning";
+		case ITEM_LOGTYPE_ERROR:
+			return "Error";
+		case ITEM_LOGTYPE_FAILURE_AUDIT:
+			return "Failure Audit";
+		case ITEM_LOGTYPE_SUCCESS_AUDIT:
+			return "Success Audit";
+		default:
+			return "unknown";
 	}
 }
 
 const char	*zbx_dservice_type_string(zbx_dservice_type_t service)
 {
-	switch (service) {
-	case SVC_SSH: return "SSH";
-	case SVC_LDAP: return "LDAP";
-	case SVC_SMTP: return "SMTP";
-	case SVC_FTP: return "FTP";
-	case SVC_HTTP: return "HTTP";
-	case SVC_POP: return "POP";
-	case SVC_NNTP: return "NNTP";
-	case SVC_IMAP: return "IMAP";
-	case SVC_TCP: return "TCP";
-	case SVC_AGENT: return "Zabbix agent";
-	case SVC_SNMPv1: return "SNMPv1 agent";
-	case SVC_SNMPv2c: return "SNMPv2c agent";
-	case SVC_SNMPv3: return "SNMPv3 agent";
-	case SVC_ICMPPING: return "ICMP Ping";
-	default: return "unknown";
+	switch (service)
+	{
+		case SVC_SSH:
+			return "SSH";
+		case SVC_LDAP:
+			return "LDAP";
+		case SVC_SMTP:
+			return "SMTP";
+		case SVC_FTP:
+			return "FTP";
+		case SVC_HTTP:
+			return "HTTP";
+		case SVC_POP:
+			return "POP";
+		case SVC_NNTP:
+			return "NNTP";
+		case SVC_IMAP:
+			return "IMAP";
+		case SVC_TCP:
+			return "TCP";
+		case SVC_AGENT:
+			return "Zabbix agent";
+		case SVC_SNMPv1:
+			return "SNMPv1 agent";
+		case SVC_SNMPv2c:
+			return "SNMPv2c agent";
+		case SVC_SNMPv3:
+			return "SNMPv3 agent";
+		case SVC_ICMPPING:
+			return "ICMP Ping";
+		default:
+			return "unknown";
 	}
 }
 
