@@ -74,6 +74,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBX-3461] fixed names of IPMI pollers in debug output and the number of items they take (asaveljevs)
  - [ZBX-3100] fixed messages in popup when no proxies or discovery checks defined (Vedmak)
  - [ZBX-3138] fixed bug when disabling application, webitems were disabled too (Vedmak)
  - [ZBX-2951] made interval hidden for trapper items (Vedmak)
